{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 15,
  "lineage": "e4f9a9b7-56d3-b63a-c36a-726d0eaa7719",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internetgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492249871:internet-gateway/igw-0d1a78c645d0d6e15",
            "id": "igw-0d1a78c645d0d6e15",
            "owner_id": "381492249871",
            "tags": {
              "Name": "ecs-igw"
            },
            "tags_all": {
              "Name": "ecs-igw"
            },
            "vpc_id": "vpc-0e68dec748cc380a6"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492249871:route-table/rtb-06d57f272c7340949",
            "id": "rtb-06d57f272c7340949",
            "owner_id": "381492249871",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1a78c645d0d6e15",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e68dec748cc380a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_internetgw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029556570f12fe93c",
            "route_table_id": "rtb-06d57f272c7340949",
            "subnet_id": "subnet-090fe6cfd3819a5da"
          },
          "dependencies": [
            "aws_internet_gateway.my_internetgw",
            "aws_route_table.my_route_table",
            "aws_subnet.public_sub_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f8bd60f28d74f1f",
            "route_table_id": "rtb-06d57f272c7340949",
            "subnet_id": "subnet-0c11256baf8a2d469"
          },
          "dependencies": [
            "aws_internet_gateway.my_internetgw",
            "aws_route_table.my_route_table",
            "aws_subnet.public_sub_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_rroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492249871:security-group/sg-08bcd2cc29e97f616",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bcd2cc29e97f616",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240524162719194200000001",
            "name_prefix": "terraform-",
            "owner_id": "381492249871",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs_security_rroup"
            },
            "tags_all": {
              "Name": "ecs_security_rroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e68dec748cc380a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492249871:subnet/subnet-08c19bc191dcd093c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c19bc191dcd093c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492249871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub_1"
            },
            "tags_all": {
              "Name": "private_sub_1"
            },
            "vpc_id": "vpc-0e68dec748cc380a6"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492249871:subnet/subnet-08beb559dc81e1480",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08beb559dc81e1480",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492249871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub_2"
            },
            "tags_all": {
              "Name": "private_sub_2"
            },
            "vpc_id": "vpc-0e68dec748cc380a6"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492249871:subnet/subnet-090fe6cfd3819a5da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090fe6cfd3819a5da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492249871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub_1"
            },
            "tags_all": {
              "Name": "public_sub_1"
            },
            "vpc_id": "vpc-0e68dec748cc380a6"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492249871:subnet/subnet-0c11256baf8a2d469",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c11256baf8a2d469",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492249871",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub_2"
            },
            "tags_all": {
              "Name": "public_sub_2"
            },
            "vpc_id": "vpc-0e68dec748cc380a6"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492249871:vpc/vpc-0e68dec748cc380a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e6fc825680cb9fd5",
            "default_route_table_id": "rtb-0fde1aee7369e2ebc",
            "default_security_group_id": "sg-044d2ad2be140fe46",
            "dhcp_options_id": "dopt-098edf5de7218c42e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e68dec748cc380a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fde1aee7369e2ebc",
            "owner_id": "381492249871"
          }
        }
      ]
    }
  ]
}